new project added

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
                 <!-- Overlay -->
                 <div class="overlay-effect d-flex align-items-center justify-content-center">
                     <div class="overlay-effect-text text-center p-5">
-                        <h5>Reading List Application</h5>
-                        <p>Allows users to save a list of books they would like to read</p>
+                        <h5>Diary Application</h5>
+                        <p>Allows users to publicly post their activities in a journal board. Created using React, Express and MongoDB Atlas. Deployed on Heroku.</p>
                         <button class="btn mini-btn reading-list-app">Live Link</button>
                         <button class="btn mini-btn reading-list-github">Github Code</button>
                     </div>
@@ -215,7 +215,7 @@
                 <div class="overlay-effect d-flex align-items-center justify-content-center">
                     <div class="overlay-effect-text text-center p-5">
                         <h5>Command Line Word Guess Game</h5>
-                        <p>Implemented a game to guess letters in a phrase using JavaScript. Simply run node index.js to run the game</p>
+                        <p>Implemented a game to guess letters in a phrase using JavaScript. Learned how to use Constructers in JavaScript.</p>
                         <button class="btn mini-btn commandline-github">Github Code</button>
                     </div>
                 </div>
@@ -230,7 +230,7 @@
                 <div class="overlay-effect d-flex align-items-center justify-content-center">
                     <div class="overlay-effect-text text-center p-5">
                         <h5>Book Search Application</h5>
-                        <p>Allows users to search any book. Test by searching "harry potter" in search bar.</p>
+                        <p>Allows users to search any book and save to database. Created using React Express and MongoDB Atlas. Deployed on Heroku.</p>
                         <button class="btn mini-btn books-app">Live Link</button>
                         <button class="btn mini-btn books-github">Github</button>
                     </div>
@@ -246,11 +246,29 @@
                 <div class="overlay-effect d-flex align-items-center justify-content-center">
                     <div class="overlay-effect-text text-center p-5">
                         <h5>Bike Share Data Analysis</h5>
-                        <p></p>
+                        <p>Python Script to analyze a set of data. Computes statistics of the dataset with Pandas package.</p>
                         <button class="btn mini-btn bikeshare-github">Github Code</button>
                     </div>
                 </div>
             </div>
+
+            <!-- Single Gallery Area -->
+            <div class="single-gallery-item side wow fadeInUp" data-wow-delay="300ms">
+                <div class="gallery--image">
+                    <img src="img/project-img/raptors.png" alt="">
+                </div>
+                <!-- Overlay -->
+                <div class="overlay-effect d-flex align-items-center justify-content-center">
+                    <div class="overlay-effect-text text-center p-5">
+                        <h5>Click Game</h5>
+                        <p>Click game to excercise memory. Created using React Express and MongoDB Atlas. Deployed on Heroku.</p>
+                        <button class="btn mini-btn raptors-app">Live Link</button>
+                        <button class="btn mini-btn raptors-github">Github Code</button>
+                    </div>
+                </div>
+            </div>
+
+
 
 
             
