change project photos

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             </div>
 
             <!-- Single Gallery Area -->
-            <div class="single-gallery-item side wow fadeInUp" data-wow-delay="300ms">
+            <div class="single-gallery-item bootcamp wow fadeInUp" data-wow-delay="300ms">
                 <div class="gallery--image">
                     <img src="img/project-img/raptors.png" alt="">
                 </div>
