--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="container">
                 <nav class="classy-navbar align-items-center justify-content-between" id="pocanav">
                     <!-- Logo -->
-                    <a href="index2.html" class="nav-brand"><img src="img/core-img/DavidMaLogo.png" alt=""></a>
+                    <a href="index.html" class="nav-brand"><img src="img/core-img/DavidMaLogo.png" alt=""></a>
 
                     <div class="classy-navbar-toggler">
                         <span class="navbarToggler"><span></span><span></span><span></span></span>
