--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <div class="overlay-effect d-flex align-items-center justify-content-center">
                     <div class="overlay-effect-text text-center p-5">
                         <h5>Click Game</h5>
-                        <p>Click game to excercise memory. Created using React Express and MongoDB Atlas. Deployed on Heroku.</p>
+                        <p>Click game to excercise memory. Created using React. Deployed on Heroku.</p>
                         <button class="btn mini-btn raptors-app">Live Link</button>
                         <button class="btn mini-btn raptors-github">Github Code</button>
                     </div>
@@ -292,7 +292,7 @@
                     <div class="section-title text-center wow fadeInUp" data-wow-delay="300ms">
                         <h6>Get In Touch</h6>
                         <h2>Message Me</h2>
-                        <p>Hi, I am David Ma from Toronto, Canada. I am a freelance Web Developer</p>
+                        <p>Please send an email to davidm989@gmail.com</p>
                     </div>
                 </div>
             </div>
