changed footer linkedin link

--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@
                 <div class="col-12">
                     <div class="footer--content-text text-center">
                         <div class="footer-social-icon">
-                            <a href="https://www.linkedin.com/in/david-weibin-ma/" data-toggle="tooltip"
+                            <a href="https://www.linkedin.com/in/david-ma6630/" data-toggle="tooltip"
                                 data-placement="top" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-                            <a href="https://github.com/david-fetchopia" data-toggle="tooltip" data-placement="top"
+                            <a href="https://github.com/davidma-cpu" data-toggle="tooltip" data-placement="top"
                                 title="GitHub"><i class="fa fa-github"></i></a>
                         </div>
                         <p>Copyright ©2021 David Ma</p>
